--- a/code/html/index.html
+++ b/code/html/index.html
@@ -104,6 +104,10 @@
                             <a href="#" class="pure-menu-link" data="panel-ha">HASS</a>
                         </li>
 
+                        <li class="pure-menu-item module module-homie">
+                            <a href="#" class="pure-menu-link" data="panel-homie">HOMIE</a>
+                        </li>
+
                         <li class="pure-menu-item module module-idb">
                             <a href="#" class="pure-menu-link" data="panel-idb">INFLUXDB</a>
                         </li>
@@ -1123,6 +1127,41 @@
                                 </div>
 
 
+                            </fieldset>
+                        </div>
+
+                    </div>
+                </form>
+
+                <form id="form-homie" class="pure-form form-settings">
+                    <div class="panel" id="panel-homie">
+
+                        <div class="header">
+                            <h1>HOMIE IOT</h1>
+                            <h2>
+                                Add this device to Homie IOT compliant software
+                            </h2>
+                        </div>
+
+                        <div class="page">
+                            <fieldset>
+
+                                <legend>Discover</legend>
+
+                                <div class="pure-g">
+                                    <label class="pure-u-1 pure-u-lg-1-4">Discover</label>
+                                    <div class="pure-u-1 pure-u-lg-1-4"><input type="checkbox" name="homieEnabled" tabindex="14" /></div>
+                                    <div class="pure-u-0 pure-u-lg-1-2"></div>
+                                    <div class="pure-u-0 pure-u-lg-1-4"></div>
+                                    <div class="pure-u-1 pure-u-lg-3-4 hint">
+                                        Homie auto-discovery feature. Enable and save to add the device to your Homie IOT compliant management console.
+                                    </div>
+                                </div>
+
+                                <div class="pure-g">
+                                    <label class="pure-u-1 pure-u-lg-1-4">Prefix</label>
+                                    <input class="pure-u-1 pure-u-lg-1-4" name="homiePrefix" type="text" tabindex="15" />
+                                </div>
                             </fieldset>
                         </div>
 
